Thu Oct 21 09:43:17 CEST 2003  Jochen Eisinger <jochen@penguin-breeder.org>

        * Modified the MIME parsing to allow \n and \r\n as delimiters.
	  Affected files lib/silcutil/silcstrutil.c
	
	* Cleaned up the escape/unescape functions for correctness and
	  speed. Affected file irssi/src/silc/core/client_ops.c

	* Removed handling for data messages with Content-Type: text/*,
	  moved parsing of MIME headers to the signal handler, added
	  support for signing and verifying data messages. Affected 
	  files are irssi/docs/signals.txt, irssi/src/silc/core/client_ops.c,
	  irssi/src/silc/core/silc-{servers,channels}.c

	* Added a perl script for handling data messages based on
	  information read from Mailcap files. New file 
	  irssi/scripts/silc-mime.pl
	
Mon Oct 20 16:08:22 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Added new SILC_MESSAGE_FLAG_ACK that can  be used to
	  acknowledge recepetion of a message to the sender.  Updated
	  protocol specs.

Sat Oct 18 11:55:33 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Unregister channel key saving callback when deleting channel.
	  Affected file lib/silcclient/idlist.c.

	* Do not remove the client from channels in NOTIFY_TYPE_SIGNOFF
	  before calling notify client operation.  Affected file is
	  lib/silcclient/client_notify.c.

	* Unregister QoS tasks when deleting the socket connection.
	  Affected files lib/silcutil/silcsockconn.[ch],
	  unix/silcunixsockconn.c.

	* Implemented latest presence-attrs draft changes.  Affected
	  files lib/silccore/silcattrs.h and
	  irssi/src/silc/core/silc-queries.c.

Tue Oct 14 18:24:53 EEST 2003  Pekka Riikonen <priikone@silcnet.org>

	* Save old channel keys in list to allow more rapid change
	  of channel keys if server for some reason does that.  This
	  avoids loosing so many channel messages due to not having
	  key to decrypt.  Affected file lib/silcclient/silcclient.h,
	  idlist.c and client_channel.c.
